Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-12204

Assertion 'FALSE' failed in REGION_bXformRgn while using FineReader 8

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.13
    • Win32SS

    Description

      I checked ABBYY FineReader 8.0 Professional Try&Buy in ROS. Installation and start-up were successful. In the process working constantly appear "Internal software error". When you try to recognize the text, the system went into BSOD.

      I share Fine Reader for test (multilanguage) on Google Drive.

      Attachments

        1. ROS_FR_BEFORE_BSOD.JPG
          89 kB
          amber
        2. ROS_FR_BSOD.JPG
          55 kB
          amber
        3. ROS_FR_ERR1.JPG
          45 kB
          amber
        4. ROS_FR_ERR2.JPG
          38 kB
          amber
        5. debug.log
          49 kB
          amber
        6. region.c.patch
          0.5 kB
          Kamil Hornicek
        7. ROS_FR_SEL_BSOD.JPG
          98 kB
          amber
        8. bsod_after_close_fr.log
          32 kB
          amber
        9. fr_with_patch_try_seltext.log
          38 kB
          amber
        10. RgnGuide.exe
          280 kB
          jimtabor
        11. snapshot102.png
          28 kB
          jimtabor
        12. region.c.patch
          2 kB
          Katayama Hirofumi MZ
        13. dbg_fr_with_patch.log
          41 kB
          amber
        14. snapshot144.png
          12 kB
          jimtabor
        15. snapshot143.png
          391 kB
          jimtabor

        Issue Links

          Activity

            People

              jimtabor jimtabor
              amber amber
              Votes:
              1 Vote for this issue
              Watchers:
              10 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: