[NTGDI] - Check for zero rectangles in REGION_bXformRgn. CORE-12204

svn path=/trunk/; revision=73881